# Maestro

./: .gitignore  .gitmodules  AGENTS.md  AGENT_HOOKS_DOCUMENTATION.md  AGENT_HOOKS_IMPLEMENTATION_GUIDE.md  AI_CLI_LIVE_TOOL_EVENT_CAPTURE_SUCCESS_CRITERIA.md  AI_CLI_LIVE_TOOL_PROTOCOL.md  AS1_COMPLETION_SUMMARY.md  BATCH_FEATURES.md  CLAUDE.md  CLI4_COMPLETION_SUMMARY.md  CLI5_COMPLETION_SUMMARY.md  GEMINI.md  LIVE_TOOL_EVENTS_INPUT_INJECTION_TESTING_README.md  LIVE_TOOL_EVENTS_INPUT_INJECTION_TEST_CHECKLIST.md  LIVE_TOOL_EVENTS_INPUT_INJECTION_TEST_PLAN.md  LIVE_TOOL_EVENTS_INPUT_INJECTION_TEST_SUMMARY.md  MAESTRO_TEST_REPORT_PHASES_1_12.md  MESSAGE_TYPES_AND_EMISSION_POINTS.md  Makefile  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE_AICLI4_COMPLETION_SUMMARY.md  PHASE_AICLI5_COMPLETION_SUMMARY.md  PLAYBOOK_FEATURE.md  PROJECT_MAP.puml  PROJECT_OVERVIEW.md  PROTOCOL_IMPLEMENTATION_SUMMARY.md  QWEN.md  README.md  README.md.bak.bak  REGRESSION_REPLAY_IMPLEMENTATION.md  REHEARSAL_CHECKPOINT_FEATURE.md  SEMANTIC_INTEGRITY.md  SUCCESS_CRITERIA_FOR_TOOL_EVENT_CAPTURE.md  SUMMARY.md  TU1_3_COMPLETION_SUMMARY.md  (+153 more)
blindfold/: .gitignore  MANIFEST.in  README.md  pyproject.toml
blindfold/src/blindfold/: __init__.py  __main__.py  cli.py  cookie.py  core.py  db.py  error_log.py  (+7 more)
blindfold/src/blindfold.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
blindfold/tests/: test_error_cookie.py  test_feedback.py  test_hygiene.py  test_mapping.py  test_session_injection.py  test_smoke.py  test_state_db.py
(+2079 files in other folders)
